--- a/sikkerhet/html/index.html
+++ b/sikkerhet/html/index.html
@@ -35,7 +35,14 @@
         <hr>
         <article>
             <h2>Kryptere alle filer og dokumenter</h2>
-            <p>Dette er det beste valget dersom oppbevaringsstedet for datamaskinen er høyt utsatt for tyveri, pga da må tyven knekke krypteringen for å åpne filen. </p>
+            <p> Kryptering er en matematisk metode som sørger for konfidensialitet ved at informasjon ikke kan leses av uvedkommende. Dette er det beste valget dersom oppbevaringsstedet for datamaskinen er høyt utsatt for tyveri, pga da må tyven knekke krypteringen for å åpne filen. </p>
+            <p>Informasjonen «låses ned» med en nøkkel og kan ikke leses før man har låst den opp igjen med riktig nøkkel. Nøkkelen som brukes til å låse opp trenger ikke å være den samme som ble brukt til å låse ned informasjonen.</p>
+            <h3>Symmetrisk kryptering</h3>
+            <p>Symmetrisk kryptering innebærer at det benyttes samme nøkkel til å låse ned og låse opp informasjon. Denne nøkkelen må utveksles mellom avsender og mottaker på en sikker måte.</p>
+            <h3>Asymmetrisk kryptering</h3>
+            <p>Asymmetrisk kryptering kalles også offentlig nøkkelkryptering (public key). Man benytter et nøkkelpar: én privat og én offentlig nøkkel, som er matematisk relatert til hverandre. Den offentlige nøkkelen kan gjøres tilgjengelig for hvem som helst, og den private er kun kjent av nøkkelens eier. Selv om det er en matematisk sammenheng mellom de to nøklene, så kan ikke den ene utledes av den andre. Den offentlige nøkkelen kan fritt distribueres. Validiteten (gyldighet og ekthet) på den offentlige nøkkelen må imidlertid kontrolleres og administreres.
+
+            </p>
             <img src="../bilder/kryptering.png" alt="">
         </article>
         <hr>
