--- a/sikkerhet/html/index.html
+++ b/sikkerhet/html/index.html
@@ -48,7 +48,7 @@
         <hr>
         <article>
             <h2>Ikke lag noe hemmelig</h2>
-            <p>Dersom du kan unngå å lage eller skrive noe hemmelig er dette det beste valget, pga gjør det ingenting om det blir stjålet.</p>
+            <p>Dersom du kan unngå å lage eller skrive noe hemmelig er nok dette det beste valget, pga gjør det ingenting om det blir stjålet.</p>
             <img src="../bilder/secret.png" alt="">
         </article>
 
