lagt til komm.css og lagd link til en person, i tillegg til mer informasjon på kommunikasjon.html

--- a/sikkerhet/html/index.html
+++ b/sikkerhet/html/index.html
@@ -12,11 +12,14 @@
 <body>
     <header>
         <h1>Datasikkerhet</h1>
+        <a href="../html/datakomponenter.html">Datakomponenter</a>
+        <br>
+        <a href="../html/komm.html">Kommunikasjon</a>
+
     </header>
     <main>
         <article>
-            <p>Komponenter i datamaskinen:</p>
-            <a href="../html/datakomponenter.html">Datakomponenter</a>
+            <h2>Generelt</h2>
             <p><span>Datasikkerhet</span> er et <span>viktig</span> tema for å beskytte private filer og dokumenter. <br> Dette kan forebygges på ulike
                 måter:
             </p>
