endringer i informasjon kommunikasjon

--- a/sikkerhet/html/komm.html
+++ b/sikkerhet/html/komm.html
@@ -33,6 +33,7 @@
                 det dominerende. To av utviklerne bak TCP/IP, <span>Vinton G. Cerf</span>
                 og <span>Robert E. Kahn</span> , lanserte i 1974 begrepet «Internett» for å beskrive hvordan standarden kunne
                 brukes til å knytte sammen nettverk av nettverk på en veldig fleksibel og effektiv måte.</p>
+                <p>World Wide Web (Internett) ble nemlig funnet opp av CERN-forskeren Tim Berners-Lee.</p>
                 <img src="../bilder/internett.png" alt="">
         </article>
         
@@ -55,7 +56,27 @@
                     HTML ble opprinnelig definert i 1989 av <span>Tim Berners-Lee</span>  og <span>Robert Caillau</span> 
                     og videreutviklet av IETF og er nå en internasjonal standard. Siden har HTML-spesifikasjonene 
                      blitt opprettholdt av World Wide Web Consortium (W3C).</p>
-                     <img src="../bilder/htmllogo.png" alt="">
+            <div id="htmllogo"></div>
+        </article>
+
+        <article>
+            <h2>HTTP og HTTPS</h2>
+            <p>For å forstå hva HTTPS er kreves det først en rask innføring i HTTP. HTTP er en forkortelse for HyperText Transfer Protocol. 
+                Det er rett og slett en fremgangsmåte for overføring av informasjon, samt lenking til andre kilder med informasjon.</p>
+            <p>Protokollen har en spørsmål- og svar-funksjon. Det betyr i praksis at du som bruker sender en forespørsel 
+                om å få se for eksempel http://www.google.no, og Google svarer med å vise deg innholdet på siden.
+                Imidlertid er HTTP kun fokusert på at innholdet som etterspørres presenteres på riktig måte hos brukeren, 
+                uten å “bry seg” om hvordan dataene forflytter seg fra punkt A til punkt B.</p>
+            <p>HyperText Transfer Protocol Secure (HTTPS) er en sikrere utgave av HTTP, 
+                hvor alt innhold som blir sendt og mottatt er kryptert.
+
+                    Dersom du for eksempel fyller ut et skjema med passord vil nettsiden 
+                    være den eneste som kan lese dette. Dette gjelder også den andre veien, 
+                    hvor en nettside trygt kan sende deg sensitiv informasjon. 
+                    I tråd med Googles egen anbefaling om å alltid benytte HTTPS er dette det
+                     foretrukne alternativet når vi driver med webutvikling for våre klienter.</p>
+
+            
         </article>
     </main>
     <footer>
