endring om oppfinner av internett

--- a/sikkerhet/html/komm.html
+++ b/sikkerhet/html/komm.html
@@ -28,12 +28,15 @@
                 for datamaskiner å kommunisere på tvers av en rekke forskjellige fysiske nett som for eksempel kabel, fiber,
                 radiolink, satellitt og trådløst nett, og er grunnlaget for at datamaskiner kan kommunisere over hele verden.</p>
             <p>Det første suksessfulle pakkesvitsjede nettverket, der data stykkkes opp i biter slik at mange datastrømmer
-                kan passere i nettverket samtidig, var ARPANET fra 1969. Pakkesvitsjing er selve grunnprinspippet i moderne
+                kan passere i nettverket samtidig, var <span>ARPANET</span>  fra 1969. Pakkesvitsjing er selve grunnprinspippet i moderne
                 dataoverføring.Det var flere konkurrerende standarder på markedet, men protokollsettet TCP/IP ble gradvis
-                det dominerende. To av utviklerne bak TCP/IP, <span>Vinton G. Cerf</span>
+                det dominerende. To av utviklerne bak TCP/IP, <span>Vinton G. Cerf</span>. TCP/IP var den første protokollen 
+                som klarte å gjøre at flere kunne kommunisere på likt.
                 og <span>Robert E. Kahn</span> , lanserte i 1974 begrepet «Internett» for å beskrive hvordan standarden kunne
                 brukes til å knytte sammen nettverk av nettverk på en veldig fleksibel og effektiv måte.</p>
-                <p>World Wide Web (Internett) ble nemlig funnet opp av CERN-forskeren Tim Berners-Lee.</p>
+                <p>World Wide Web (Internett) ble nemlig funnet opp av CERN-forskeren Tim Berners-Lee. <span>Timothy John Berners-Lee</span>  (født 8. juni 1955 i London) er en britisk datainnovatør. 
+                    Han er mest kjent for å ha oppfunnet World Wide Web. 
+                    Han er leder av World Wide Web Consortium, som står for videreutviklingen av World Wide Web. </p>
                 <img src="../bilder/internett.png" alt="">
         </article>
         
